tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_to_const_str.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:str = "Hello"
x <- "World"

